fixed input placeholder getting cut off when creating new channel

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -579,6 +579,8 @@
     flex-direction: column;
     height: 100%;
   }
+
+  
   
   .create-channel__header {
     display: flex;
@@ -638,6 +640,7 @@
   
   .channel-name-input__wrapper input::placeholder {
     font-weight: 300;
+    overflow: visible;
     color: rgba(0, 0, 0, 0.5);
   }
   
